feat: add architecture of sass-files

--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+html {
+  font-size: 10px;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: "Open Sans", Verdana, sans-serif;
+}
+
+/*# sourceMappingURL=style.css.map */
