--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -8,3 +8,37 @@ body {
   font-size: 1.6rem;
   font-family: 'Open Sans', Verdana, sans-serif;
 }
+
+h1 {
+  // typography
+  font-family: 'Poppins Bold', Verdana, sans-serif;
+  font-size: 44px;
+  line-height: 54px;
+}
+
+h2 {
+  // typography
+  font-family: 'Open Sans Bold', Verdana, sans-serif;
+  font-size: 34px;
+  line-height: 46px;
+}
+
+h3 {
+  font-family: 'Open Sans Bold', Verdana, sans-serif;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+h4 {
+  // typography
+  font-family: 'Open Sans SemiBold', Verdana, sans-serif;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+h5 {
+  // typography
+  font-family: 'Open Sans Bold', Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+}
