--- a/style.css
+++ b/style.css
@@ -7,4 +7,34 @@ body {
   font-family: "Open Sans", Verdana, sans-serif;
 }
 
+h1 {
+  font-family: "Poppins Bold", Verdana, sans-serif;
+  font-size: 44px;
+  line-height: 54px;
+}
+
+h2 {
+  font-family: "Open Sans Bold", Verdana, sans-serif;
+  font-size: 34px;
+  line-height: 46px;
+}
+
+h3 {
+  font-family: "Open Sans Bold", Verdana, sans-serif;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+h4 {
+  font-family: "Open Sans SemiBold", Verdana, sans-serif;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+h5 {
+  font-family: "Open Sans Bold", Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+}
+
 /*# sourceMappingURL=style.css.map */
