--- a/assets/sass/abstract/_constants.scss
+++ b/assets/sass/abstract/_constants.scss
@@ -3,8 +3,13 @@ $color-additional: #ff7549;
 $color-background: #ffeee1;
 $color-link: #1943ef;
 $color-tag: #f5f5f5;
-$color-text: #544737;
+$color-text: #544837;
 $color-heading: #2f281e;
+$color-border: #d7d7d7;
+$color-hovered: #bcd0e5;
+$color-light: #ffffff;
+$color-hamburger: #173a56;
+$color-overlay: rgba(80, 80, 80, 0.4);
 
 $color-violet: #7752be;
 $color-yellow: #fab005;
