--- a/style.css
+++ b/style.css
@@ -37,4 +37,98 @@ h5 {
   line-height: 26px;
 }
 
+.button {
+  padding: 11px 25px 13px;
+  font-family: "Open Sans SemiBold", Verdana, sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  border-radius: 4px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.button--bordered {
+  color: #544837;
+  border: 1px solid #d7d7d7;
+  background-color: #ffffff;
+}
+
+.button--colored {
+  color: #ffffff;
+  background-color: #ff9900;
+  border: 1px solid #ff9900;
+}
+
+.button--colored:hover {
+  background-color: #ff7549;
+  border: 1px solid #ff7549;
+}
+
+.button--bordered:hover {
+  background-color: #bcd0e5;
+  border: 1px solid #bcd0e5;
+}
+
+.wrapper {
+  max-width: 1197px;
+  margin: 0 auto;
+}
+
+.header {
+  padding: 15px 0 17px 0;
+  background-color: #ffffff;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+}
+
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__buttons {
+  font-size: 0;
+}
+
+.header__buttons > .button {
+  margin-left: 14px;
+}
+
+.header__buttons > .button:first-child {
+  margin-left: 0;
+}
+
+.navigation {
+  display: flex;
+  font-size: 1.5rem;
+  line-height: 2.8rem;
+}
+
+.navigation__link {
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.contact-us {
+  background-color: #ffeee1;
+}
+
+.promo {
+  padding: 30px 0;
+}
+
+.promo__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.promo__content {
+  padding-right: 65px;
+}
+
+.promo__buttons > .button {
+  margin-right: 44px;
+}
+
 /*# sourceMappingURL=style.css.map */
