--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.logo-path {
+  transition: all 0.3s ease-out;
+}
+
 html {
   font-size: 10px;
 }
@@ -67,6 +71,10 @@ h5 {
 .button--bordered:hover {
   background-color: #bcd0e5;
   border: 1px solid #bcd0e5;
+}
+
+.logo-svg:hover .logo-path {
+  fill: #ff9900;
 }
 
 .wrapper {
