--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -12,33 +12,28 @@ body {
 h1 {
   // typography
   font-family: 'Poppins Bold', Verdana, sans-serif;
-  font-size: 44px;
-  line-height: 54px;
+  @include font($size: 4.4rem, $height: 5.4rem);
 }
 
 h2 {
   // typography
   font-family: 'Open Sans Bold', Verdana, sans-serif;
-  font-size: 34px;
-  line-height: 46px;
+  @include font($size: 3.4rem, $height: 4.6rem);
 }
 
 h3 {
   font-family: 'Open Sans Bold', Verdana, sans-serif;
-  font-size: 24px;
-  line-height: 34px;
+  @include font($size: 2.4rem, $height: 3.4rem);
 }
 
 h4 {
   // typography
   font-family: 'Open Sans SemiBold', Verdana, sans-serif;
-  font-size: 22px;
-  line-height: 30px;
+  @include font($size: 2.2rem, $height: 3rem);
 }
 
 h5 {
   // typography
   font-family: 'Open Sans Bold', Verdana, sans-serif;
-  font-size: 16px;
-  line-height: 26px;
+  @include font($size: 1.6rem, $height: 2.6rem);
 }
