--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -13,5 +13,6 @@
 @import 'layouts/header';
 
 // Components
+@import 'components/navigation';
 @import 'components/contact-us';
 @import 'components/promo';
