--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-.logo-path {
+.navigation__link, .logo-path {
   transition: all 0.3s ease-out;
+}
+
+body {
+  font-family: "Open Sans", Verdana, sans-serif;
+}
+
+h5, h3, h2 {
+  font-family: "Open Sans Bold", Verdana, sans-serif;
+}
+
+h4 {
+  font-family: "Open Sans SemiBold", Verdana, sans-serif;
+}
+
+.promo__text, h1 {
+  font-family: "Poppins", Verdana, sans-serif;
 }
 
 html {
@@ -8,35 +24,29 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Open Sans", Verdana, sans-serif;
 }
 
 h1 {
-  font-family: "Poppins Bold", Verdana, sans-serif;
   font-size: 4.4rem;
   line-height: 5.4rem;
 }
 
 h2 {
-  font-family: "Open Sans Bold", Verdana, sans-serif;
   font-size: 3.4rem;
   line-height: 4.6rem;
 }
 
 h3 {
-  font-family: "Open Sans Bold", Verdana, sans-serif;
   font-size: 2.4rem;
   line-height: 3.4rem;
 }
 
 h4 {
-  font-family: "Open Sans SemiBold", Verdana, sans-serif;
   font-size: 2.2rem;
   line-height: 3rem;
 }
 
 h5 {
-  font-family: "Open Sans Bold", Verdana, sans-serif;
   font-size: 1.6rem;
   line-height: 2.6rem;
 }
@@ -112,6 +122,9 @@ h5 {
   padding: 0 10px;
   cursor: pointer;
 }
+.navigation__link:hover {
+  color: #ff9900;
+}
 
 .contact-us {
   background-color: #ffeee1;
@@ -137,6 +150,13 @@ h5 {
 
 .promo__buttons > .button {
   margin-right: 44px;
+}
+
+.promo__text {
+  max-width: 487px;
+  margin: 0 0 45px;
+  font-size: 1.8rem;
+  line-height: 2.8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
