--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@ h5, h3, h2 {
   font-family: "Open Sans Bold", Verdana, sans-serif;
 }
 
-h4 {
+.button, h4 {
   font-family: "Open Sans SemiBold", Verdana, sans-serif;
 }
 
 .promo__text, h1 {
   font-family: "Poppins", Verdana, sans-serif;
+}
+
+.link-button {
+  font-family: "Poppins SemiBold", Verdana, sans-serif;
 }
 
 html {
@@ -24,6 +28,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  line-height: 2.6rem;
 }
 
 h1 {
@@ -53,7 +58,6 @@ h5 {
 
 .button {
   padding: 11px 25px 13px;
-  font-family: "Open Sans SemiBold", Verdana, sans-serif;
   font-size: 1.6rem;
   line-height: 2.2rem;
   border-radius: 4px;
@@ -79,8 +83,36 @@ h5 {
   border-color: #ff7549;
 }
 
+.link-button {
+  display: inline-flex;
+  align-items: center;
+  color: #ff9900;
+  transition: 0.3s;
+}
+.link-button:hover {
+  color: #f03e3d;
+}
+.link-button:hover .ico--play {
+  background-image: url("../../img/icons/play-hover.svg");
+}
+
+.link-button__text {
+  margin-left: 9px;
+}
+
 .logo-svg:hover .logo-path {
   fill: #ff9900;
+}
+
+.ico {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.ico--play {
+  width: 18px;
+  height: 19px;
+  background-image: url("../../img/icons/play.svg");
 }
 
 .wrapper {
