--- a/assets/sass/base/_buttons.scss
+++ b/assets/sass/base/_buttons.scss
@@ -2,9 +2,8 @@
   // box-model
   padding: 11px 25px 13px;
   // typography
-  font-family: 'Open Sans SemiBold', Verdana, sans-serif;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
+  @extend %font-prim-sb;
+  @include font($size: 1.6rem, $height: 2.2rem);
   // decor
   border-radius: 4px;
   // transition
@@ -39,4 +38,29 @@
       border-color: $color-additional;
     }
   }
+}
+
+.link-button {
+  // box-model
+  display: inline-flex;
+  align-items: center;
+  // typography
+  @extend %font-add-sb;
+  color: $color-primary;
+  // transition
+  transition: 0.3s;
+
+  &:hover {
+    // typography
+    color: $color-red;
+
+    .ico--play {
+      background-image: url('../../img/icons/play-hover.svg');
+    }
+  }
+}
+
+.link-button__text {
+  // box-model
+  margin-left: 9px;
 }
