--- a/assets/sass/abstract/_mixins.scss
+++ b/assets/sass/abstract/_mixins.scss
@@ -3,3 +3,13 @@
   font-size: $size;
   line-height: $height;
 }
+
+@mixin columns($width) {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  > * {
+    flex-basis: $width;
+  }
+}
