--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -12,8 +12,10 @@
 //Layouts
 @import 'layouts/wrapper';
 @import 'layouts/header';
+@import 'layouts/columns';
 
 // Components
 @import 'components/navigation';
 @import 'components/contact-us';
 @import 'components/promo';
+@import 'components/tools';
