--- a/style.css
+++ b/style.css
@@ -144,6 +144,24 @@ h5 {
   margin-left: 0;
 }
 
+.layout-4-column {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.layout-4-column > * {
+  flex-basis: 21%;
+}
+
+.layout-3-column {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.layout-3-column > * {
+  flex-basis: 30%;
+}
+
 .navigation {
   display: flex;
   font-size: 1.5rem;
