--- a/style.css
+++ b/style.css
@@ -162,6 +162,15 @@ h5 {
   flex-basis: 30%;
 }
 
+.layout-2-column {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.layout-2-column > * {
+  flex-basis: 45%;
+}
+
 .navigation {
   display: flex;
   font-size: 1.5rem;
