--- a/assets/sass/base/_icons.scss
+++ b/assets/sass/base/_icons.scss
@@ -5,10 +5,69 @@
   cursor: pointer;
 }
 
+.icon-square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 19px;
+
+  &--yellow {
+    background-color: $color-yellow;
+  }
+
+  &--red {
+    background-color: $color-red;
+  }
+
+  &--blue {
+    background-color: $color-blue;
+  }
+
+  &--violet {
+    background-color: $color-violet;
+  }
+}
+
 .ico--play {
-  // box-model
   width: 18px;
   height: 19px;
-  // decor
-  background-image: url('../../img/icons/play.svg');
+  background-image: url('assets/img/icons/play.svg');
+}
+
+.ico--arrow {
+  width: 12px;
+  height: 17px;
+  background-image: url('assets/img/icons/arrow.svg');
+}
+
+.ico--snake {
+  width: 18px;
+  height: 14px;
+  background-image: url('assets/img/icons/snake.svg');
+}
+
+.ico--heart {
+  width: 17px;
+  height: 15px;
+  background-image: url('assets/img/icons/heart.svg');
+}
+
+.ico--clock {
+  width: 15px;
+  height: 17px;
+  background-image: url('assets/img/icons/clock.svg');
+}
+
+.ico--phone {
+  width: 13px;
+  height: 13px;
+  background-image: url('assets/img/icons/phone.svg');
+}
+
+.ico--letter {
+  width: 11px;
+  height: 8px;
+  background-image: url('assets/img/icons/letter.svg');
 }
