feat: add tags, edit base, contact-us, strategies, columns and style

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -37,3 +37,8 @@ h5 {
   @extend %font-prim-b;
   @include font($size: 1.6rem, $height: 2.6rem);
 }
+
+.block-shadowed {
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+}
