--- a/assets/sass/components/_contact-us.scss
+++ b/assets/sass/components/_contact-us.scss
@@ -1,3 +1,36 @@
 .contact-us {
+  padding: 62px 82px;
   background-color: $color-background;
+}
+
+.contact-us__form {
+  input,
+  textarea {
+    padding: 10px 21px;
+    border: none;
+    border-radius: 5px;
+    border: 1px solid $color-light;
+    background-color: $color-light;
+
+    &:focus {
+      border-color: $color-primary;
+      outline: none;
+    }
+  }
+
+  textarea {
+    width: 100%;
+    height: 160px;
+    resize: none;
+  }
+}
+
+.contact-us__line {
+  margin-bottom: 19px;
+}
+
+.contact-us__button {
+  > * {
+    min-width: 117px;
+  }
 }
